# gigevision

./: .clang-format-google  CMakeLists.txt  README.md
include/GigeV/: AppleSockets.hpp  ISockets.hpp  Sockets.hpp  cordef.hpp  corenv.hpp
src/: AppleSockets.cpp
tests/: CMakeLists.txt  test_applesockets.cpp  test_gtest.cpp
tools/: Run.cpp
